# VPN_PROJECT

./: BEGINNERS_GUIDE.md  CMakeLists.txt  GITHUB_DEMO.md  README.md  TESTING.md  TEST_RESULTS.md  run_tests.ps1  test_results.txt
include/: AEAD.h  CryptoDefs.h  KDF.h  KeyExchange.h  Protocol.h  Session.h  TunDevice.h  UdpSocket.h  wintun.h
report/: architecture.md  project_report.md  summary.md
src/client/: main.cpp
src/crypto/: AEAD.cpp  KDF.cpp  KeyExchange.cpp
src/protocol/: Protocol.cpp  Session.cpp
src/server/: main.cpp
src/tun/: TunDevice.cpp
src/utils/: UdpSocket.cpp
